Changes in QMPlay2 build 17.07.20:
	- Tekstowo: minor improvement,
	- don't delete Radio settings,
	- fix YouTube images,

Changes in QMPlay2 build 17.06.09:
	- load next video decoder if current video decoder fails (fixes some VideoToolBox problems),
	- more accurate seeking (use double type instead of seconds in integer),
	- 17 ms is now default value for visualizations refresh time,
	- allow to automatically remove ungrouped playlist entries,
	- stepping to previous frame (experimental),
	- improve Radio module - add Radio Browser,
	- move playback settings to options menu,
	- use name from playlist for downloader,
	- accurate playback position on slider,
	- increase default buffer sizes,
	- support for OpenSSL 1.1,
	- bugfix,

Changes in QMPlay2 build 17.04.21:
	- automatically reconnect network streams on error (fixes some problems with YouTube playback),
	- accurate seeking (available in playback settings, enabled for network streams by default),
	- minor network backward seeking bugfix (regression),
	- option to reconnect live network streams on error,
	- add experimental VideoToolBox decoder for macOS,
	- use Opus as default codec for YouTube videos,
	- use OpenGL as option for visualizations,
	- improve downloading from YouTube,
	- improve full screen on macOS,
	- fix ReplayGain in APE,
	- CUVID bugfix,

Changes in QMPlay2 build 17.04.02:
	- seek to 0 position when repeat entry is enabled,
	- fix drawing smooth cover images (regression),
	- updated Russian translation (victorr2007),
	- high dpi scaling enabled only for macOS,
	- use SVG icons (new QtSvg dependency),
	- fixed "QMPlay2.appdata.xml" file,
	- handle multimedia keys on macOS,
	- minor network seeking fixes,
	- bugfix,

Changes in QMPlay2 build 17.03.17:
	- playlists from MediaBrowser and YouTube are no longer loaded by temporary file,
	- replace Http class by NetworkAccess and use it in more places,
	- use Freedesktop notifications for all notifications (option),