@@ -68,14 +68,14 @@
          </layout>
         </widget>
        </item>
-       <item row="13" column="0">
+       <item row="14" column="0">
         <widget class="QPushButton" name="setKeyBindingsB">
          <property name="text">
           <string>Set key bindings</string>
          </property>
         </widget>
        </item>
-       <item row="12" column="0">
+       <item row="13" column="0">
         <layout class="QHBoxLayout" name="horizontalLayout_3">
          <property name="spacing">
           <number>3</number>
@@ -285,21 +285,21 @@
          </property>
         </widget>
        </item>
-       <item row="6" column="0">
+       <item row="7" column="0">
         <widget class="QCheckBox" name="displayOnlyFileName">
          <property name="text">
           <string>Always display only file names in playlist</string>
          </property>
         </widget>
        </item>
-       <item row="7" column="0">
+       <item row="8" column="0">
         <widget class="QCheckBox" name="restoreRepeatMode">
          <property name="text">
           <string>Remember repeat mode</string>
          </property>
         </widget>
        </item>
-       <item row="11" column="0">
+       <item row="12" column="0">
         <widget class="QGroupBox" name="proxyB">
          <property name="title">
           <string>Use proxy server</string>
@@ -364,7 +364,7 @@
          </layout>
         </widget>
        </item>
-       <item row="1" column="1" rowspan="11">
+       <item row="1" column="1" rowspan="12">
         <spacer name="horizontalSpacer">
          <property name="orientation">
           <enum>Qt::Horizontal</enum>
@@ -377,7 +377,7 @@
          </property>
         </spacer>
        </item>
-       <item row="14" column="0" colspan="2">
+       <item row="15" column="0" colspan="2">
         <spacer name="verticalSpacer">
          <property name="orientation">
           <enum>Qt::Vertical</enum>
@@ -390,24 +390,31 @@
          </property>
         </spacer>
        </item>
-       <item row="8" column="0">
+       <item row="9" column="0">
         <widget class="QCheckBox" name="stillImages">
          <property name="text">
           <string>Read and display still images</string>
          </property>
         </widget>
        </item>
-       <item row="9" column="0">
+       <item row="10" column="0">
         <widget class="QCheckBox" name="trayNotifiesDefault">
          <property name="text">
           <string>Use tray notifications as default</string>
          </property>
         </widget>
        </item>
-       <item row="10" column="0">
+       <item row="11" column="0">
         <widget class="QCheckBox" name="autoDelNonGroupEntries">
          <property name="text">
           <string>Automatically delete ungrouped entries</string>
+         </property>
+        </widget>
+       </item>
+       <item row="6" column="0">
+        <widget class="QCheckBox" name="hideArtistMetadata">
+         <property name="text">
+          <string>Hide artist metadata</string>
          </property>
         </widget>
        </item>
@@ -436,6 +443,7 @@
   <tabstop>autoOpenVideoWindowB</tabstop>
   <tabstop>tabsNorths</tabstop>
   <tabstop>allowOnlyOneInstance</tabstop>
+  <tabstop>hideArtistMetadata</tabstop>
   <tabstop>displayOnlyFileName</tabstop>
   <tabstop>restoreRepeatMode</tabstop>
   <tabstop>stillImages</tabstop>
